--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,20 +1,9 @@
-.swiper-slide {
-  transition: transform 0.3s ease;
-}
-
-.swiper-slide-active {
-  transform: scale(1.2) !important; 
-  z-index: 10; 
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-}
-
-.btn-hover:hover {
-  background-color: #3a56d4 !important;
-}
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0,0,0,0.15);
-}
-.card:hover img {
-  transform: scale(1.05);
+.about-img{
+    background-image: url("../src/assets/about.png");
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    width: 100%;
+    position: relative;
+    background-attachment: fixed;
 }
